Extracted transition out to CSS

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,11 +3,33 @@
 @tailwind components;
 
 .bubble {
-  @apply absolute rounded-full z-0;
+  position: absolute;
+  z-index: 0;
+  border-radius: 50%;
   top: 50%;
   left: 50%;
-  width: 1px;
-  height: 1px;
+  width: 10px;
+  height: 10px;
+  visibility: hidden;
+  transform: scale(1);
+  transition: transform 0.2s ease-in;
+}
+
+.card-link:hover .bubble {
+  visibility: visible;
+  transform: scale(26);
+}
+
+.bubble.partial {
+  visibility: visible;
+  transform: scale(28);
+}
+
+.bubble.expanded,
+.card-link:hover .bubble.expanded {
+  visibility: visible;
+  transition: transform 0.4s ease-in;
+  transform: scale(400);
 }
 
 @tailwind utilities;
